<resources>
    <string name="app_name">UAFClient</string>
    <string name="action_settings">Settings</string>

    <string name="title_setting">设置</string>
    <string name="title_account_manager">账号管理</string>
    <string name="title_reg_records">我的UAF设备</string>

    <string name="drawer_open">open drawer</string>
    <string name="drawer_close">close drawer</string>

    <string name="reg_success">Reg Success</string>
    <string name="auth_success">Auth Success</string>

    <string name="welcome">欢迎你:%s</string>

    <string name="logout">退出登陆</string>
    <string name="not_login">您还未登陆</string>
    <string name="login">登陆</string>
    <string name="register">注册</string>
    <string name="account">用户名</string>
    <string name="password">密码</string>
    <string name="confirm">确定</string>
    <string name="reset">重置</string>
    <string name="cancel">取消</string>
    <string name="dereg_success">注销成功</string>
    <string name="dereg_title">确定注销设备:%s ?</string>
    <string name="dereg_prompt">注销后你将不能用此设备免密码登陆!</string>
    <string name="asm_pack_prompt">默认ASM包名为:%s</string>

    <string name="uaf_login">生物认证登陆</string>
    <string name="account_login">账号密码登陆</string>

    <string name="uaf_device_login">UAF设备免密码登陆</string>
    <string name="input_account_login">输入账号密码登陆</string>
    <string name="login_success">登陆成功</string>
    <string name="user_is_null">用户名或密码不能为空</string>

    <string name="uaf_device_reg">注册UAF设备</string>
    <string name="not_have_uaf_device">你还未注册UAF设备</string>
    <string name="already_reg">已注册UAF设备</string>

    <string name="default_asm_app_name">默认ASM应用名称:%s</string>
    <string name="default_asm_none">未设置默认ASM</string>

    <string name="navdrawer_item_explore">Explore</string>
    <string name="navdrawer_item_my_schedule">Home</string>
    <string name="navdrawer_item_settings">Settings</string>

    <string name="navdrawer_selected_menu_item_a11y_wrapper">%1$s selected menu item</string>
    <string name="navdrawer_menu_item_a11y_wrapper">%1$s  menu item</string>

</resources>
