<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/navdrawer"
    android:layout_width="@dimen/navdrawer_width"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    android:background="@color/navdrawer_background"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/navdrawer_account_height"
            android:background="@color/theme_primary_dark">

            <ImageView
                android:id="@+id/profile_cover_image_placeholder"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/io_logo" />

            <LinearLayout
                android:id="@+id/login_root"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/keyline_1"
                android:paddingRight="@dimen/keyline_1">

                <com.jin.fidotest.widget.BezelImageView
                    android:id="@+id/profile_image"
                    android:layout_width="@dimen/navdrawer_profile_image_size"
                    android:layout_height="@dimen/navdrawer_profile_image_size"
                    android:scaleType="centerCrop"
                    android:src="@drawable/person_image_empty"
                    app:maskDrawable="@drawable/circle_mask" />

                <LinearLayout
                    android:id="@+id/username_root_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/ll_login"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_username"
                            style="@style/LoginTextAppearance" />

                        <Button
                            android:id="@+id/btn_logout"
                            android:layout_width="match_parent"
                            android:layout_height="24dp"
                            android:layout_marginTop="8dp"
                            android:background="@drawable/btn_following"
                            android:gravity="center"
                            android:text="@string/logout"
                            android:textColor="@color/text_on_primary"
                            android:textSize="12sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ll_not_login"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:visibility="gone">

                        <TextView
                            style="@style/LoginTextAppearance"
                            android:layout_width="@dimen/me_login_button_width"
                            android:text="@string/not_login" />

                        <Button
                            android:id="@+id/btn_login"
                            android:layout_width="match_parent"
                            android:layout_height="24dp"
                            android:layout_marginTop="8dp"
                            android:background="@drawable/btn_following"
                            android:text="@string/login"
                            android:textColor="@color/text_on_primary"
                            android:textSize="12sp" />

                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>


        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/navdrawer_items_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/navview_menu_item_top_bottom_padding"
                android:layout_marginTop="@dimen/navview_menu_item_top_bottom_padding"
                android:orientation="vertical">

            </LinearLayout>

        </FrameLayout>
    </LinearLayout>
</ScrollView>